--- a/proto/build.gradle
+++ b/proto/build.gradle
@@ -11,8 +11,6 @@ dependencies {
     // gRPC dependencies
     compile "io.grpc:grpc-protobuf:$grpc_version"
     compile "io.grpc:grpc-stub:$grpc_version"
-    // https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
-    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 }
 
 protobuf {
@@ -32,6 +30,7 @@ sourceSets {
             srcDir rootProject.file('external/ibc-go/proto')
             srcDir rootProject.file('external/ibc-go/third_party/proto')
             srcDir rootProject.file('external/yui-fabric-ibc/proto')
+            srcDir rootProject.file('external/lcp/proto/definitions')
         }
         java {
             srcDirs 'build/generated/source/proto/main/grpc'
